# Orbital-Simulation

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  imgui.ini
.VSCodeCounter/2022-09-08_17-13-23/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-09-08_17-13-33/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-10-05_18-34-09/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-10-17_19-39-52/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
include/glad/: glad.c  glad.h
shaders/: EmissionShader.frag  EmissionShader.vert  blur.frag  shader.frag
src/: camera.hpp  gizmos.cpp  gizmos.hpp  globals.hpp  init.cpp  init.hpp  input.cpp  input.hpp  main.cpp  math.hpp  mesh.cpp  mesh.hpp  planet.cpp  planet.hpp  shader.cpp  shader.hpp  start.cpp  start.hpp  ui.cpp  ui.hpp  update.cpp  update.hpp
src/shaders/: EmissionShader.frag  EmissionShader.vert  framebuffer.frag  shader.frag  shader.vert
